Bug 185617 - Images are invalid / not found when an album is moved
Summary: Images are invalid / not found when an album is moved
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Thumbs-Image (other bugs)
Version First Reported In: 1.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-26 16:43 UTC by Andi Clemens
Modified: 2012-06-27 11:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andi Clemens 2009-02-26 16:43:52 UTC
Version:           0.11.0-svn (using 4.2.00 (KDE 4.2.0), Arch Linux)
Compiler:          gcc
OS:                Linux (i686) release 2.6.28-ARCH

When you move an entire album to a new location, the thumbnails in the new location are mostly displayed, sometimes they are corrupted.
If you click on a thumb, most of the time an image is displayed, but sometimes not...
:-)
If it happens, you get the "unknown image" thumbnail or a message that the image can not be opened.

One way to reproduce this behavior all the time is to press F5 in the new location of the album:

1. Move an album to a new place
2. Go into this new album
3. Press F5
4. All thumbs are gone and none of the image is accessible.

You can not convince digiKam that the files are actually there, "Scan for new images" etc doesn't help. The only way to have them back is a restart.

This is true for 0.10 branch, too.

Note: When moving or copying single images, it is not happening. Only when a complete album is moved.

Andi
Comment 1 Andi Clemens 2009-04-07 14:30:54 UTC
I guess this bug is the same as when just renaming an album, like somebody mentioned on the mailing list today.

Andi
Comment 2 Marcel Wiesweg 2009-04-12 17:56:44 UTC
SVN commit 952814 by mwiesweg:

Difficult to spot little beast: On album movement, the id may stay the same,
but the path changes. The relative path cached at this place becomes invalid.
All ImageInfos will forever continue to use this cached value, giving wrong path
(the old path in fact).

BUG: 185617

 M  +20 -0     imageinfocache.cpp  
 M  +1 -0      imageinfocache.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952814