Difficult to spot little beast: On album movement, the id may stay the same, but the path changes. The relative path cached at this place becomes invalid. All ImageInfos will forever continue to use this cached value, giving wrong path (the old path in fact).

BUG: 185617

svn path=/trunk/extragear/graphics/digikam/; revision=952814